tests/semantic/extended_subtypes3/extended_subtypes3.err
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 20
SymbolChain(a, a, a) :- SymbolChain(a, _, _).
---------------^------------------------------
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 20
SymbolChain(a, a, a) :- SymbolChain(a, _, _).
------------------^---------------------------
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 21
SymbolChain(b, b, b) :- SymbolChain(_, b, _).
------------------^---------------------------
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 33
RecordSubtypes(x, [1, x], x) :- RecordSubtypes(x, _, _). // error in [1, x] and x
--------------------------^-------------------------------------------------------
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 34
RecordSubtypes(y, y, y) :- RecordSubtypes(y, _, _). // Should be error in second place and third place.
------------------^-------------------------------------------------------------------------------------
Error: Atoms argument type is not a subtype of its declared type in file extended_subtypes3.dl at line 34
RecordSubtypes(y, y, y) :- RecordSubtypes(y, _, _). // Should be error in second place and third place.
---------------------^----------------------------------------------------------------------------------
6 errors generated, evaluation aborted
